--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: jonnie k
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: student at a school doing year 7 learning blog.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar:https://avatars3.githubusercontent.com/u/4943487?v=3&s=460
 
 #
 # Flags below are optional
