--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: jonnie k
+name: Jonnie k
 
 # Short bio or description (displayed in the header)
 description: student at a school doing year 7 learning blog.
